# multi-agents

./: .gitignore  README.md  TODO.md  blog-post-mono-to-multi-agent.md  deploy-rag-and-vectorstore.sh  docker-compose.yml  test-rag-workflow.sh
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.sh  test_react_agent.py  test_react_simple.py
backend/app/: main.py
backend/app/api/: a2a.py  ao_schemas.py  claims.py  documents.py  hitl.py  orchestrator.py  orchestrator_schemas.py  postal.py  postal_schemas.py  schemas.py  tenders.py
backend/app/core/: config.py  database.py  tracing.py
backend/app/llamastack/: __init__.py  ao_prompts.py  courrier_prompts.py  orchestrator_prompts.py  prompts.py
backend/app/models/: claim.py  conversation.py  reclamation.py  tender.py
backend/app/services/: __init__.py  claim_service.py  document_storage.py  reclamation_service.py  tender_service.py
backend/mcp_servers/claims_server/: Dockerfile  requirements.txt  server.py
backend/mcp_servers/ocr_server/: Dockerfile  download_models.py  requirements.txt  (+2 more)
backend/scripts/: Dockerfile  docling_parse_pdfs.py  generate_all_embeddings.py  generate_claim_pdfs.py  generate_embeddings_job.py  generate_enriched_seed.py  generate_realistic_pdfs.py  generate_reclamation_pdfs.py  generate_tender_pdfs.py  init_data.py  seed_database.py  seed_rag_data.py  show_react_trace.sh  test_ocr_vs_vision.py  upload_documents_to_llamastack.py  upload_pdfs_to_openshift.sh
backend/tests/: README.md  conftest.py
(+459 files in other folders)
